builds/tests/529/data/attachments/1d2513f780b6b122.txt
ERROR    lexiflux.middleware:middleware.py:56 Exception: error: Expected book-code and search-term
Traceback (most recent call last):
  File "/home/runner/work/lexiflux/lexiflux/lexiflux/views/reader_views.py", line 377, in search
    raise ValueError("Expected book-code and search-term")
ValueError: Expected book-code and search-term

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/runner/work/lexiflux/lexiflux/.venv/lib/python3.12/site-packages/django/core/handlers/base.py", line 197, in _get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/work/lexiflux/lexiflux/lexiflux/decorators.py", line 29, in wrapper
    return login_required(view_func)(request, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/work/lexiflux/lexiflux/.venv/lib/python3.12/site-packages/django/contrib/auth/decorators.py", line 60, in _view_wrapper
    return view_func(request, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/work/lexiflux/lexiflux/.venv/lib/python3.12/site-packages/django/views/decorators/http.py", line 64, in inner
    return func(request, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/work/lexiflux/lexiflux/lexiflux/views/reader_views.py", line 464, in search
    raise ValueError(f"error: {str(e)}") from e
ValueError: error: Expected book-code and search-term
WARNING  django.request:log.py:248 Bad Request: /search/